created the mobile version of the website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebDev-Course</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.html">
+    <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
@@ -79,6 +81,127 @@
         <div>
             <h2 class="title">Our Staff</h2>
             <hr>
+        </div>
+        <div class="grid-container1">
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff1.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>Zahra</h2>
+                    <p class="expertise">CEO of the company</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad.</p>
+                </div>
+            </div>
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff2.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>Sakina</h2>
+                    <p class="expertise">HTML Expert</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem?</p>
+                </div>
+            </div>
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff3.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>Safar Ali</h2>
+                    <p class="expertise">CSS Expert</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem!</p>
+                </div>
+            </div>  
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff4.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>Jenny</h2>
+                    <p class="expertise">Javascript teacher</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis!</p>
+                </div>
+            </div>
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff5.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>John</h2>
+                    <p class="expertise">Ruby and Phython expert</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In!</p>
+                </div>
+            </div>
+            <div class="grid-item1">
+                <div class="staffImage">
+                    <img src="./images/staff6.jpg" alt="staffMember">
+                </div>
+                <div class="details">
+                    <h2>Sakina</h2>
+                    <p class="expertise">Ruby on Rails expert</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum.</p>
+                </div>
+            </div>   
+          </div>
+    </section>
+
+    <!-- about section -->
+    <section id="about">
+        <div class="aboutUs">
+            <div id="aboutVision">
+                <p>"Hello! Teaching Code"</p>
+                <h2>THE GLOBAL SCHOOL<br>&nbsp;&nbsp;FOR CODING 2022</h2>
+            </div>
+            <div class="aboutPara">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, at itaque. Eligendi incidunt nisi voluptate, iure quis pariatur quasi maxime!</p>
+            </div>
+            <div class="aboutEmail">
+                <p>If you have any questions regarding the school<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Send us email on below address<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>abc@gmail.com</b></p>
+            </div>
+        </div>
+        <div class="aboutUsLogo">
+            <div>
+                <h2>THE GLOBAL SCHOOL<br>&nbsp;&nbsp;FOR CODING 2022</h2>
+                <hr>
+            </div>
+            <div>
+                <p>The logo of the school was designed by a student of the school on 1st May 2021</p>
+            </div>
+            <div>
+                <img src="./images/logo.jpg" alt="logo">
+            </div>
+        </div>
+        <div class="aboutUsPast">
+            <div>
+                <h2>See the results of our two past batches</h2>
+                <hr>
+            </div>
+            <div>
+                <p>The last two batches have sucessfully been completed with more then 95% sucess</p>
+            </div>
+            <div class="one">
+                <div class="batches">
+                    <p>Our last batch, that ended in Dec 2021</p>
+                </div>
+            </div>
+            <div class="two">
+                <div class="batches">
+                    <p>Our previous batch that ended in Dec 2020</p>
+                </div>
+            </div>
+        </div>
+        <div class="aboutUsPartners">
+            <div>
+                <div>
+                    <h2>Our Partners</h2>
+                    <hr>
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <img src="./images/logo.jpg" alt="icon">
+            <p>Safar coding school,<br>Rights Reserved</p>
         </div>
     </section>
     
