desktop version of the website also completed

--- a/index.html
+++ b/index.html
@@ -17,6 +17,28 @@
     <!-- Navigation section -->
     <header>
         <nav>
+            <div class="page">
+                <ul>
+                    <li><img src="./images/twitter-48.png" alt="twitter-icon"></li>
+                    <li><img src="./images/facebook-48.png" alt="linkedIn-icon"></li>
+                    <li><a href="#">English</a></li>
+                    <li><a href="#">My page</a></li>
+                    <li><a href="#">Log out</a></li>
+                </ul>
+            </div>
+            <div class="nav">
+                <div class="logo">
+                    <img src="./images/logo.jpg" alt="logo">
+                </div>
+                <div class="navList">
+                    <ul>
+                        <li><a href="#">Courses</a></li>
+                        <li><a href="#">Staff</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li class="cont" ><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+            </div>
             <div id="burgerIcon">
                 <img src="./images/burgerIcon.svg" alt="burgerIcon">
             </div>
@@ -72,6 +94,9 @@
         </div>
         <div class="buttons">
             <button>Join us to learn Coding</button>
+        </div>
+        <div class="programDetails">
+            <p>SEE THE WHOLE PROGRAM</p>
         </div>
     </section>
 
@@ -138,74 +163,27 @@
                     <img src="./images/staff6.jpg" alt="staffMember">
                 </div>
                 <div class="details">
-                    <h2>Sakina</h2>
+                    <h2>Mechelle</h2>
                     <p class="expertise">Ruby on Rails expert</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum.</p>
                 </div>
             </div>   
-          </div>
-    </section>
-
-    <!-- about section -->
-    <section id="about">
-        <div class="aboutUs">
-            <div id="aboutVision">
-                <p>"Hello! Teaching Code"</p>
-                <h2>THE GLOBAL SCHOOL<br>&nbsp;&nbsp;FOR CODING 2022</h2>
-            </div>
-            <div class="aboutPara">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, at itaque. Eligendi incidunt nisi voluptate, iure quis pariatur quasi maxime!</p>
-            </div>
-            <div class="aboutEmail">
-                <p>If you have any questions regarding the school<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Send us email on below address<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>abc@gmail.com</b></p>
-            </div>
         </div>
-        <div class="aboutUsLogo">
-            <div>
-                <h2>THE GLOBAL SCHOOL<br>&nbsp;&nbsp;FOR CODING 2022</h2>
-                <hr>
-            </div>
-            <div>
-                <p>The logo of the school was designed by a student of the school on 1st May 2021</p>
-            </div>
-            <div>
-                <img src="./images/logo.jpg" alt="logo">
-            </div>
-        </div>
-        <div class="aboutUsPast">
-            <div>
-                <h2>See the results of our two past batches</h2>
-                <hr>
-            </div>
-            <div>
-                <p>The last two batches have sucessfully been completed with more then 95% sucess</p>
-            </div>
-            <div class="one">
-                <div class="batches">
-                    <p>Our last batch, that ended in Dec 2021</p>
-                </div>
-            </div>
-            <div class="two">
-                <div class="batches">
-                    <p>Our previous batch that ended in Dec 2020</p>
-                </div>
-            </div>
-        </div>
-        <div class="aboutUsPartners">
-            <div>
+        <div class="foot">
+            <div class="aboutUsPartners">
                 <div>
-                    <h2>Our Partners</h2>
-                    <hr>
+                    <div>
+                        <h2>Our Partners</h2>
+                        <hr>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="copyright">
-            <img src="./images/logo.jpg" alt="icon">
-            <p>Safar coding school,<br>Rights Reserved</p>
+            <div class="copyright">
+                <img src="./images/logo.jpg" alt="icon">
+                <p>Safar coding school, Rights Reserved</p>
+            </div>
         </div>
     </section>
-    
-
 
 
     <script src="index.js"></script>
