resolved the linters errors. Going to deploy the page

--- a/about.html
+++ b/about.html
@@ -28,13 +28,13 @@
         </div>
         <div class="nav">
             <div class="logo">
-                <img src="./images/logo.jpg" alt="logo">
+                <a href="index.html"><img src="./images/logo.jpg" alt="logo"></a>
             </div>
             <div class="navList">
                 <ul>
-                    <li><a href="#">Courses</a></li>
-                    <li><a href="#">Staff</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="index.html#mainProgram">Courses</a></li>
+                    <li><a href="index.html#staff">Staff</a></li>
+                    <li><a href="about.html">About Us</a></li>
                     <li class="cont" ><a href="#">Contact Us</a></li>
                 </ul>
             </div>
