--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
                 </div>
                 <div class="navList">
                     <ul>
-                        <li><a href="#">Courses</a></li>
-                        <li><a href="#">Staff</a></li>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="#mainProgram">Courses</a></li>
+                        <li><a href="#staff">Staff</a></li>
+                        <li><a href="about.html">About Us</a></li>
                         <li class="cont" ><a href="#">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
             <div id="burgerIcon">
                 <img src="./images/burgerIcon.svg" alt="burgerIcon">
+            </div>
+            <div id="cross">
+                <img id="cross1" src="./images/crossIcon.png" alt="cross-Icon">
             </div>
         </nav>
         <div id="headline">
