completed the javascript section for the first page

--- a/about.html
+++ b/about.html
@@ -16,6 +16,16 @@
 
     <!-- Navigation section -->
 
+    <div id="cross">
+        <img id="cross1" src="./images/crossIcon.png" alt="cross-Icon">
+        <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html#mainProgram" class="click">Courses</a></li>
+            <li><a href="index.html#staff" class="click">Staff</a></li>
+            <li><a href="about.html">About Us</a></li>
+            <li class="cont" ><a href="index.html#partners" class="click">Our Partners</a></li>
+        </ul>
+    </div>
     <div class="aboutNav">
         <div class="page">
             <ul>
@@ -109,6 +119,6 @@
             <p class="copyrightPara2">Safar coding school, All Rights Reserved</p>
         </div>
     </section>
-    
+    <script src="index.js"></script>
 </body>
 </html>
