--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
     <!-- Navigation section -->
     <header>
+        <div id="cross">
+            <img id="cross1" src="./images/crossIcon.png" alt="cross-Icon">
+            <ul id="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#mainProgram" class="click">Courses</a></li>
+                <li><a href="#staff" class="click">Staff</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li class="cont" ><a href="#partners" class="click">Our Partners</a></li>
+            </ul>
+        </div>
         <nav>
             <div class="page">
                 <ul>
@@ -35,15 +45,12 @@
                         <li><a href="#mainProgram">Courses</a></li>
                         <li><a href="#staff">Staff</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li class="cont" ><a href="#">Contact Us</a></li>
+                        <li class="cont" ><a href="#partners">Our Partners</a></li>
                     </ul>
                 </div>
             </div>
-            <div id="burgerIcon">
-                <img src="./images/burgerIcon.svg" alt="burgerIcon">
-            </div>
-            <div id="cross">
-                <img id="cross1" src="./images/crossIcon.png" alt="cross-Icon">
+            <div>
+                <img id="burgerIcon" src="./images/burgerIcon.svg" alt="burgerIcon">
             </div>
         </nav>
         <div id="headline">
@@ -172,7 +179,7 @@
                 </div>
             </div>   
         </div>
-        <div class="foot">
+        <div class="foot" id="partners">
             <div class="aboutUsPartners">
                 <div>
                     <div>
