completed the JS part and resolved the linters errors

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="grid-item">
                 <img src="./images/JS-icon.svg" alt="icons">
-                <h2>Javascript</h2>
+                <h2>Java- script</h2>
                 <p>Make the website dynamic with the help of Javascript.</p>
             </div>  
             <div class="grid-item">
@@ -118,7 +118,7 @@
             <hr>
         </div>
         <div class="grid-container1">
-            <div class="grid-item1">
+            <!-- <div class="grid-item1">
                 <div class="staffImage">
                     <img src="./images/staff1.jpg" alt="staffMember">
                 </div>
@@ -177,24 +177,24 @@
                     <p class="expertise">Ruby on Rails expert</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum.</p>
                 </div>
-            </div>   
+            </div>    -->
         </div>
-        <div class="foot" id="partners">
-            <div class="aboutUsPartners">
+        
+    </section>
+    <div class="foot" id="partners">
+        <div class="aboutUsPartners">
+            <div>
                 <div>
-                    <div>
-                        <h2>Our Partners</h2>
-                        <hr>
-                    </div>
+                    <h2>Our Partners</h2>
+                    <hr>
                 </div>
             </div>
-            <div class="copyright">
-                <img src="./images/logo.jpg" alt="icon">
-                <p>Safar coding school, Rights Reserved</p>
-            </div>
         </div>
-    </section>
-
+        <div class="copyright">
+            <img src="./images/logo.jpg" alt="icon">
+            <p>Safar coding school, Rights Reserved</p>
+        </div>
+    </div>
 
     <script src="index.js"></script>
 </body>
